overlay: Enable STK for Samsung devices
Change-Id: Idaa28d8a72cac947c45e6d31d522da7a5d406841

Signed-off-by: dh-harald <github@criminal.hu>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -102,4 +102,7 @@
     <!-- Disable the home key unlock setting -->
     <bool name="config_disableHomeUnlockSetting">false</bool>
 
+    <!-- Boolean to enable stk functionality on Samsung phones -->
+    <bool name="config_samsung_stk">false</bool>
+
 </resources>
